--- a/extra_pageProject1.html
+++ b/extra_pageProject1.html
@@ -14,7 +14,7 @@
       	<!-- this div contains the logo and title os the page -->
         <div class="title-combo">
             <div class="website-logo">
-                <a href="file.html"><img src="img58.jpg"></a>
+                <a href="index.html"><img src="img58.jpg"></a>
             </div>
             <div class="website-name">
                 <h1>
